--- a/src/app/(auth)/auth.css
+++ b/src/app/(auth)/auth.css
@@ -107,6 +107,18 @@ body{
     margin-bottom: 2px;
 }
 
+.password_container{
+    position: relative;
+    width: 100%;
+}
+
+.password_icon{
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+}
+
 .flex_container{
     display: flex;
     gap: 30px;
@@ -133,6 +145,12 @@ body{
     font-weight: 100;
 }
 
+.recover_password{
+    background-color: transparent;
+    color: white;
+    font-style: italic;
+    cursor: pointer;
+}
 
 .button_responsive {
     background-color: var(--primary-color);
